@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.7 2002/05/03 21:31:02 jtb Exp $
+$NetBSD: distinfo,v 1.8 2003/02/27 12:59:44 wulf Exp $
 
-SHA1 (swi-prolog/pl-lite-5.0.5.tar.gz) = ac7c0240fa153d4b7d8067131de4354afa2785e6
-Size (swi-prolog/pl-lite-5.0.5.tar.gz) = 1350527 bytes
+SHA1 (swi-prolog/pl-lite-5.0.10.tar.gz) = cf05274988798348005ffc93689fa7733b1403ec
+Size (swi-prolog/pl-lite-5.0.10.tar.gz) = 1372342 bytes
 SHA1 (patch-aa) = 2b6164ed8cc4398c1e7cc2662016e202f61e51f2
 SHA1 (patch-ab) = 66576bfd1c48a9501070308b8925f1cf4ff0bb37
